--- a/actions/create_epg.yaml
+++ b/actions/create_epg.yaml
@@ -15,4 +15,10 @@
       description: "json Data to create"
       required: true
       position: 1
+    credentials:
+      type: "object"
+      description: "Field to provide username and password, eg { \"user\":\"username\", \"passwd\": \"secret\" }"
+      required: false
+      secret: true
+      position: 2
 
