--- a/actions/get_bds.yaml
+++ b/actions/get_bds.yaml
@@ -10,4 +10,11 @@
       description: "Which ACI APIC would you like to connect to"
       required: true
       position: 0
+    credentials:
+      type: "object"
+      description: "Field to provide username and password, eg { \"user\":\"username\", \"passwd\": \"secret\" }"
+      required: false
+      secret: true
+      position: 1
+
 
