--- a/actions/workflows/setup_epg.yaml
+++ b/actions/workflows/setup_epg.yaml
@@ -6,6 +6,7 @@ cisco_aci.setup_epg:
   input:
     - apic
     - epg_spec
+    - credentials
   tasks:
     build_ap:
       action: cisco_aci.create_ap
@@ -13,6 +14,7 @@ cisco_aci.setup_epg:
       input:
         apic: <% $.apic %>
         data: <% $.epg_spec %>
+        credentials: <% $.credentials %>
       on-success:
         - build_bd 
     build_bd:
@@ -21,6 +23,7 @@ cisco_aci.setup_epg:
       input:
         apic: <% $.apic %>
         data: <% $.epg_spec %>
+        credentials: <% $.credentials %>
       on-success:
         - build_epg 
     build_epg:
@@ -29,6 +32,7 @@ cisco_aci.setup_epg:
       input:
         apic: <% $.apic %>
         data: <% $.epg_spec %>
+        credentials: <% $.credentials %>
       on-success:
         - link_domains
     link_domains:
@@ -37,6 +41,7 @@ cisco_aci.setup_epg:
       input:
         apic: <% $.apic %>
         data: <% $.epg_spec %>
+        credentials: <% $.credentials %>
       on-success:
         - build_static_bindings
     build_static_bindings:
@@ -45,4 +50,4 @@ cisco_aci.setup_epg:
       input:
         apic: <% $.apic %>
         data: <% $.epg_spec %>
-
+        credentials: <% $.credentials %>
