--- a/rules/setup_epg.yaml
+++ b/rules/setup_epg.yaml
@@ -16,9 +16,13 @@ criteria:
   trigger.body.epg_spec:
     pattern: "^value$"
     type: "exists"
+  trigger.body.credentials:
+    pattern: "^value$"
+    type: "exists"
 
 action:
   ref: "cisco_aci.setup_epg"
   parameters:
     apic: "{{trigger.body.apic}}"
     epg_spec: "{{trigger.body.epg_spec}}"
+    credentials: "{{trigger.body.credentials}}"
