--- a/pack.yaml
+++ b/pack.yaml
@@ -1,7 +1,7 @@
 ref: cisco_aci
-name: Cisco ACI
+name: cisco_aci
 description: Cisco ACI pack
-version: 0.1.1
+version: 0.1.3
 author: Paul Mulvihill
 email: paul.mulvihill@pulsant.com
 keywords:
