--- a/actions/get_static_bindings.yaml
+++ b/actions/get_static_bindings.yaml
@@ -1,7 +1,7 @@
 ---
   name: "get_static_bindings"
   runner_type: "python-script"
-  description: "Retrieve list of Tenants"
+  description: "Retrieve list of Static Bindings"
   enabled: true
   entry_point: "get_static_bindings.py"
   parameters:
