--- a/aliases/find_mac.yaml
+++ b/aliases/find_mac.yaml
@@ -13,7 +13,7 @@ ack:
   format: "Working..."
 
 # There may be multiple entries - for each entry, return the following data
-# Depending on the IP address some values may be available, some not.
+# Depending on the MAC address some values may be available, some not.
 result:
   format: |
       Action completed!
